src/objdetect/objdetect.h

CvStatus HOG_GetDefaultPeopleDetector(VecFloat *rval);
CvStatus HOGDescriptor_getDescriptorSize(HOGDescriptor self, size_t *rval);
CvStatus HOGDescriptor_getWinSigma(HOGDescriptor self, double *rval);
CvStatus HOGDescriptor_groupRectangles(HOGDescriptor self, VecRect rectList, VecDouble weights,
                                       int groupThreshold, double eps);
void     QRCodeDetector_Close(QRCodeDetectorPtr self);
CvStatus QRCodeDetector_DetectAndDecode(QRCodeDetector self, Mat input, VecPoint *points,
                                        Mat *straight_qrcode, char **rval);
CvStatus QRCodeDetector_Detect(QRCodeDetector self, Mat input, VecPoint *points, bool *rval);
CvStatus QRCodeDetector_Decode(QRCodeDetector self, Mat input, VecPoint *points, Mat straight_qrcode,
                               char **rval);
CvStatus QRCodeDetector_DetectAndDecodeMulti(QRCodeDetector self, Mat input, VecVecChar *decoded,
                                             VecPoint *points, VecMat *straight_code, bool *rval);