packages/dartcv/lib/src/g/objdetect.g.dart


  ffi.Pointer<CvStatus> HOGDescriptor_getDaimlerPeopleDetector_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_getDaimlerPeopleDetector_Async(
      callback,
    );
  }

  late final _HOGDescriptor_getDaimlerPeopleDetector_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'HOGDescriptor_getDaimlerPeopleDetector_Async');
  late final _HOGDescriptor_getDaimlerPeopleDetector_Async =
      _HOGDescriptor_getDaimlerPeopleDetector_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_getDescriptorSize(
    HOGDescriptor self,
    ffi.Pointer<ffi.Size> rval,
  ) {
    return _HOGDescriptor_getDescriptorSize(
      self,
      rval,
    );
  }

  late final _HOGDescriptor_getDescriptorSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor,
              ffi.Pointer<ffi.Size>)>>('HOGDescriptor_getDescriptorSize');
  late final _HOGDescriptor_getDescriptorSize =
      _HOGDescriptor_getDescriptorSizePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_getDescriptorSize_Async(
    HOGDescriptor self,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_getDescriptorSize_Async(
      self,
      callback,
    );
  }

  late final _HOGDescriptor_getDescriptorSize_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor,
              imp1.CvCallback_1)>>('HOGDescriptor_getDescriptorSize_Async');
  late final _HOGDescriptor_getDescriptorSize_Async =
      _HOGDescriptor_getDescriptorSize_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_getWinSigma(
    HOGDescriptor self,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _HOGDescriptor_getWinSigma(
      self,
      rval,
    );
  }

  late final _HOGDescriptor_getWinSigmaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor,
              ffi.Pointer<ffi.Double>)>>('HOGDescriptor_getWinSigma');
  late final _HOGDescriptor_getWinSigma =
      _HOGDescriptor_getWinSigmaPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_getWinSigma_Async(
    HOGDescriptor self,
    imp1.CvCallback_1 callback,
  ) {
    return _HOGDescriptor_getWinSigma_Async(
      self,
      callback,
    );
  }

  late final _HOGDescriptor_getWinSigma_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor,
              imp1.CvCallback_1)>>('HOGDescriptor_getWinSigma_Async');
  late final _HOGDescriptor_getWinSigma_Async =
      _HOGDescriptor_getWinSigma_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HOGDescriptor_groupRectangles(
    HOGDescriptor self,
    ffi.Pointer<VecRect> rectList,
    ffi.Pointer<VecF64> weights,
    int groupThreshold,
    double eps,
  ) {
    return _HOGDescriptor_groupRectangles(
      self,
      rectList,
      weights,
      groupThreshold,
      eps,
    );
  }

  late final _HOGDescriptor_groupRectanglesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecF64>,
              ffi.Int,
              ffi.Double)>>('HOGDescriptor_groupRectangles');
  late final _HOGDescriptor_groupRectangles =
      _HOGDescriptor_groupRectanglesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<VecRect>,
              ffi.Pointer<VecF64>, int, double)>();

  ffi.Pointer<CvStatus> HOGDescriptor_groupRectangles_Async(
    HOGDescriptor self,
    ffi.Pointer<VecRect> rectList,
    ffi.Pointer<VecF64> weights,
    int groupThreshold,
    double eps,
    imp1.CvCallback_0 callback,
  ) {
    return _HOGDescriptor_groupRectangles_Async(
      self,
      rectList,
      weights,
      groupThreshold,
      eps,
      callback,
    );
  }

  late final _HOGDescriptor_groupRectangles_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecF64>,
              ffi.Int,
              ffi.Double,
              imp1.CvCallback_0)>>('HOGDescriptor_groupRectangles_Async');
  late final _HOGDescriptor_groupRectangles_Async =
      _HOGDescriptor_groupRectangles_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, ffi.Pointer<VecRect>,
              ffi.Pointer<VecF64>, int, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> HOG_GetDefaultPeopleDetector(
    ffi.Pointer<VecF32> rval,
  ) {
    return _HOG_GetDefaultPeopleDetector(
      rval,
    );
  }

  late final _HOG_GetDefaultPeopleDetectorPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>>(
      'HOG_GetDefaultPeopleDetector');
  late final _HOG_GetDefaultPeopleDetector = _HOG_GetDefaultPeopleDetectorPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecF32>)>();

  ffi.Pointer<CvStatus> HOG_GetDefaultPeopleDetector_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _HOG_GetDefaultPeopleDetector_Async(
      callback,
    );
  }

  late final _HOG_GetDefaultPeopleDetector_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'HOG_GetDefaultPeopleDetector_Async');
  late final _HOG_GetDefaultPeopleDetector_Async =
      _HOG_GetDefaultPeopleDetector_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  void QRCodeDetector_Close(
    QRCodeDetectorPtr self,
  ) {
    return _QRCodeDetector_Close(
      self,
    );
  }

  late final _QRCodeDetector_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(QRCodeDetectorPtr)>>(
          'QRCodeDetector_Close');
  late final _QRCodeDetector_Close =
      _QRCodeDetector_ClosePtr.asFunction<void Function(QRCodeDetectorPtr)>();

  ffi.Pointer<CvStatus> QRCodeDetector_Decode(
    QRCodeDetector self,
    Mat input,
    ffi.Pointer<VecPoint> points,
    Mat straight_qrcode,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _QRCodeDetector_Decode(
      self,
      input,
      points,
      straight_qrcode,
      rval,
    );
  }

  late final _QRCodeDetector_DecodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector,
              Mat,
              ffi.Pointer<VecPoint>,
              Mat,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('QRCodeDetector_Decode');
  late final _QRCodeDetector_Decode = _QRCodeDetector_DecodePtr.asFunction<
      ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat, ffi.Pointer<VecPoint>,
          Mat, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<CvStatus> QRCodeDetector_Decode_Async(
    QRCodeDetector self,
    Mat input,
    imp1.CvCallback_3 callback,
  ) {
    return _QRCodeDetector_Decode_Async(
      self,
      input,
      callback,
    );
  }

  late final _QRCodeDetector_Decode_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat,
              imp1.CvCallback_3)>>('QRCodeDetector_Decode_Async');
  late final _QRCodeDetector_Decode_Async =
      _QRCodeDetector_Decode_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector, Mat, imp1.CvCallback_3)>();

  ffi.Pointer<CvStatus> QRCodeDetector_Detect(
    QRCodeDetector self,
    Mat input,
    ffi.Pointer<VecPoint> points,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _QRCodeDetector_Detect(
      self,
      input,
      points,
      rval,
    );
  }

  late final _QRCodeDetector_DetectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector,
              Mat,
              ffi.Pointer<VecPoint>,
              ffi.Pointer<ffi.Bool>)>>('QRCodeDetector_Detect');
  late final _QRCodeDetector_Detect = _QRCodeDetector_DetectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          QRCodeDetector, Mat, ffi.Pointer<VecPoint>, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecode(
    QRCodeDetector self,
    Mat input,
    ffi.Pointer<VecPoint> points,
    ffi.Pointer<Mat> straight_qrcode,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _QRCodeDetector_DetectAndDecode(
      self,
      input,
      points,
      straight_qrcode,
      rval,
    );
  }

  late final _QRCodeDetector_DetectAndDecodePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  QRCodeDetector,
                  Mat,
                  ffi.Pointer<VecPoint>,
                  ffi.Pointer<Mat>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'QRCodeDetector_DetectAndDecode');
  late final _QRCodeDetector_DetectAndDecode =
      _QRCodeDetector_DetectAndDecodePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector,
              Mat,
              ffi.Pointer<VecPoint>,
              ffi.Pointer<Mat>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecodeMulti(
    QRCodeDetector self,
    Mat input,
    ffi.Pointer<VecVecChar> decoded,
    ffi.Pointer<VecPoint> points,
    ffi.Pointer<VecMat> straight_code,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _QRCodeDetector_DetectAndDecodeMulti(
      self,
      input,
      decoded,
      points,
      straight_code,
      rval,
    );
  }

  late final _QRCodeDetector_DetectAndDecodeMultiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector,
              Mat,
              ffi.Pointer<VecVecChar>,
              ffi.Pointer<VecPoint>,
              ffi.Pointer<VecMat>,
              ffi.Pointer<ffi.Bool>)>>('QRCodeDetector_DetectAndDecodeMulti');
  late final _QRCodeDetector_DetectAndDecodeMulti =
      _QRCodeDetector_DetectAndDecodeMultiPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector,
              Mat,
              ffi.Pointer<VecVecChar>,
              ffi.Pointer<VecPoint>,
              ffi.Pointer<VecMat>,
              ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecodeMulti_Async(
    QRCodeDetector self,
    Mat input,
    imp1.CvCallback_4 callback,
  ) {
    return _QRCodeDetector_DetectAndDecodeMulti_Async(
      self,
      input,
      callback,
    );
  }

  late final _QRCodeDetector_DetectAndDecodeMulti_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(QRCodeDetector, Mat,
              imp1.CvCallback_4)>>('QRCodeDetector_DetectAndDecodeMulti_Async');
  late final _QRCodeDetector_DetectAndDecodeMulti_Async =
      _QRCodeDetector_DetectAndDecodeMulti_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              QRCodeDetector, Mat, imp1.CvCallback_4)>();

  ffi.Pointer<CvStatus> QRCodeDetector_DetectAndDecode_Async(
    QRCodeDetector self,
    Mat input,
    imp1.CvCallback_3 callback,
  ) {
    return _QRCodeDetector_DetectAndDecode_Async(
      self,
      input,
      callback,
    );
  }
